Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T6234077.out
T6234077.java:7:8: compiler.err.class.public.should.be.in.file: kindname.class, Foo
1 error
