Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T6234077.java
/*
 * @test /nodynamiccopyright/
 * @bug 6234077
 * @compile/fail/ref=T6234077.out -XDrawDiagnostics T6234077.java
 */

public class Foo { }
